added jsdoc for Boards put and delete, swagger.json updated
