# lib/public/swagger.json
@@ -104,6 +104,95 @@
             "description": "Board Not Found"
           }
         }
+      },
+      "put": {
+        "tags": [
+          "Boards"
+        ],
+        "summary": "Updates a current board requested by id.",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "type": "string",
+            "format": "uuid",
+            "description": "The ID of the requested board"
+          },
+          {
+            "in": "body",
+            "name": "board info",
+            "description": "The info required to create a board.",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "type": "string",
+                  "example": "Board 1"
+                },
+                "members": {
+                  "type": "array",
+                  "items": {
+                    "type": "string",
+                    "example": [
+                      "John",
+                      "Elizabeth"
+                    ]
+                  }
+                },
+                "done": {
+                  "type": "boolean",
+                  "example": false
+                }
+              }
+            }
+          }
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "Board was found and updated."
+          },
+          "400": {
+            "description": "Request body is not valid."
+          },
+          "404": {
+            "description": "The requested board was not found."
+          },
+          "500": {
+            "description": "Internal Server Error has occured while processing the request body."
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Boards"
+        ],
+        "summary": "Deletes the board requested by id",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "type": "string",
+            "format": "uuid",
+            "description": "The ID of the requested board",
+            "example": "573357c2-dfcb-493c-a0aa-3c05ef199943"
+          }
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "Board found and deleted."
+          },
+          "404": {
+            "description": "Board was not found."
+          }
+        }
       }
     }
   },
