# lib/router/router.js
@@ -70,13 +70,13 @@ router.get('/api/boards', listBoards)
  *      - Boards
  *    summary: Returns the board requested by id
  *    parameters:
-*       - in: path
-*         name: id
-*         required: true
-*         type: string
-*         format: uuid
-*         description: The ID of the requested board
-*         example: "573357c2-dfcb-493c-a0aa-3c05ef199943"
+ *      - in: path
+ *        name: id
+ *        required: true
+ *        type: string
+ *        format: uuid
+ *        description: The ID of the requested board
+ *        example: "573357c2-dfcb-493c-a0aa-3c05ef199943"
  *    produces:
  *       - application/json
  *    responses:
@@ -128,7 +128,77 @@ router.get('/api/boards/:boardID', getBoardByID)
 
  */
 router.post('/api/boards', addBoard)
+
+/**
+ * @swagger
+ *
+ * /api/boards/{id}:
+ *   put:
+ *    tags:
+ *      - Boards
+ *    summary: Updates a current board requested by id.
+ *    parameters:
+ *      - in: path
+ *        name: id
+ *        required: true
+ *        type: string
+ *        format: uuid
+ *        description: The ID of the requested board
+ *      - in: body
+ *        name: board info
+ *        description: The info required to create a board.
+ *        schema:
+ *          type: object
+ *          properties:
+ *            name:
+ *              type: string
+ *              example: Board 1
+ *            members:
+ *              type: array
+ *              items:
+ *                type: string
+ *                example: [ "John", "Elizabeth" ]
+ *            done:
+ *              type: boolean
+ *              example: false
+ *    produces:
+ *       - application/json
+ *    responses:
+ *      200:
+ *        description: Board was found and updated.
+ *      400:
+ *        description: Request body is not valid.
+ *      404:
+ *        description: The requested board was not found.
+ *      500:
+ *        description: Internal Server Error has occured while processing the request body.
+ */
 router.put('/api/boards/:boardID', updateBoard)
+
+/**
+ * @swagger
+ *
+ * /api/boards/{id}:
+ *   delete:
+ *    tags:
+ *      - Boards
+ *    summary: Deletes the board requested by id
+ *    parameters:
+ *      - in: path
+ *        name: id
+ *        required: true
+ *        type: string
+ *        format: uuid
+ *        description: The ID of the requested board
+ *        example: "573357c2-dfcb-493c-a0aa-3c05ef199943"
+ *    produces:
+ *       - application/json
+ *    responses:
+ *      200:
+ *        description: Board found and deleted.
+ *      404:
+ *        description: Board was not found.
+ */
 router.delete('/api/boards/:boardID', removeBoard)
 
 router.on('GET', '/*.html', (request, response) => {
